feature: added email verification and password reset
